[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
board_plugin = { path = "../board_plugin" }
network_shared = { path = "../network_shared" }

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.11.0", optional = true }
naia-bevy-client = { version = "0.10.1" }

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = ["render", "bevy_winit", "png"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.7.0"
default-features = false
features = ["x11"]

[build-dependencies]
embed-resource = "1.6.3"
