[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0.7", default-features=false }
bevy_core = { version = "0.7", default-features=false }
bevy_ecs = { version = "0.7", default-features=false }
bevy_log = { version = "0.7", default-features=false }
naia-bevy-server ={ version = "0.10.1", features = ["use-udp"]}
network_shared = { path = "../network_shared" }